# rfgenerator

./: .gitignore  .mxproject  CMakeLists.txt  README.md  RFGeneratormain.ioc  STM32H723XG_FLASH.ld  desktop.ini  pyproject.toml  requirements.txt  rf_controller.py  rfgenerator.ioc
Core/: README.md
Core/Inc/: AD9851.h  ad603.h  ad9851.h  main.h
Core/Src/: AD9851.c  ad9851.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
Firmware/Core/Inc/: main.h
Firmware/Core/Src/: ad603.c
PCB/: Project PA107 BOM.csv  README.md
PCB/PA107_PCB (5-24-2026 8-40-11 PM)/: PA107_PCB.BomDoc  PA107_PCB.PrjPcb  PA107_PCB.PrjPcbStructure  PA107_Schematic.SchDoc  PCB1.PcbDoc
Sims/: ESB_PA107_sim.asc  ESB_PA107_sim.net  ESB_PA107_sim.op.raw  ESB_PA107_sim.raw  PA107.LIB  PA107.asy  PA107_Spice_Simulation_Guide.md  README.md  desktop.ini
Transformer/: README.md
cmake/stm32cubemx/: CMakeLists.txt
design/: architecture.md
docs/: WIRING.md
examples/: quickstart.py
pc-app/: README.md  requirements.txt  rf_controller.py
src/rfgenerator/: __init__.py  __main__.py  cli.py  modulation.py  output.py  signal_generator.py  sweep.py
tests/: test_cli.py  test_modulation.py  test_output.py  test_signal_generator.py  test_sweep.py
