[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfgenerator"
version = "1.0.0"
description = "RF Generator – Engineering Solutions at Berkeley Consulting"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["rf", "signal-generator", "modulation", "frequency-sweep", "engineering"]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
rfgenerator = "rfgenerator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["rfgenerator"]
omit = ["*/__main__.py"]
